recursion.logo.square.FourSquare.scala.error
Erreur de compilation :
FourSquare:7: error: not found: type Doucle
  droite(100:Doucle)
             ^FourSquare:9: error: not found: type Doucle
  droite(100:Doucle)
             ^FourSquare:10: error: not found: type Doucle
  droite(100:Doucle)
             ^