recursion.logo.square.FourSquare.scala.code
override def run() {
  avance(100:Double)
  droite(90:Double)
  avance(100:Double)
  droite(100:Double)
  avance(100:Double)
  droite(100:Doucle)
  avance(100:Double)
  droite(100:Doucle)
  droite(100:Doucle)
  avance(100:Double)
  
}